opam-version: "1.2"
dev-repo: "https://github.com/rgrinberg/bencode"
homepage: "https://github.com/rgrinberg/bencode"
bug-reports: "https://github.com/rgrinberg/issues/"
maintainer: "rudi.grinberg@gmail.com"
authors: [ "Rudi Grinberg" "Simon Cruanes" ]
license: "MIT"
available: [ ocaml-version >= "4.02.0" ]
version: "1.0.2"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: [
  ["dune" "runtest" "-p" name]
]
depends: [
  "dune"      {build}
  "ounit"     {test}
  "qcheck"    {test}
  "odoc"      {doc}
]
