opam-version: "2.0"
dev-repo: "git+https://github.com/rgrinberg/bencode"
homepage: "https://github.com/rgrinberg/bencode"
synopsis: "Bencode (`.torrent` file format) reader/writer in OCaml"
bug-reports: "https://github.com/rgrinberg/issues/"
maintainer: "rudi.grinberg@gmail.com"
authors: [ "Rudi Grinberg" "Simon Cruanes" ]
license: "MIT"
version: "1.0.2"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  "dune"
  "ounit"     {with-test}
  "qcheck"    {with-test}
  "odoc"      {with-doc}
  "ocaml" { >= "4.02.0"}
]
