
(executables
  (names test test_ounit test_qcheck)
  (libraries bencode qcheck oUnit))

(alias
  (name runtest)
  (deps test.exe)
  (action (run ./test.exe)))

(alias
  (name runtest)
  (deps test_ounit.exe test.torrent)
  (action (run ./test_ounit.exe)))

(alias
  (name runtest)
  (deps test_qcheck.exe)
  (action (run ./test_qcheck.exe)))
